@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-24T08:13:24Z",
-  "count_outdated" : 2602,
-  "uniques_outdated" : 986,
-  "count" : 2631,
+  "timestamp" : "2023-07-25T01:01:12Z",
+  "count_outdated" : 2605,
+  "uniques_outdated" : 988,
+  "count" : 2632,
   "uniques" : 1002,
   "clones" : [
-    {
-      "timestamp": "2023-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-11T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
